--- a/.github/workflows/deploy.q6.yml
+++ b/.github/workflows/deploy.q6.yml
@@ -20,7 +20,7 @@ jobs:
           echo ::set-env name=GITHUB_TOKEN::$(echo ${GITHUB_TOKEN})
       - name: Define client-side environment
         run: |
-          echo ::set-env name=REACT_APP_MILJO::q6
+          echo ::set-env name=REACT_APP_MILJO::Q6
           echo ::set-env name=REACT_APP_URL::https://www-q6.nav.no/person/personopplysninger
           echo ::set-env name=REACT_APP_PDL_URL::https://www-q6.nav.no/person/pdl-fullmakt-ui
           echo ::set-env name=REACT_APP_API_URL::https://www-q6.nav.no/person/personopplysninger-api
