--- a/.github/workflows/deploy.q6.yml
+++ b/.github/workflows/deploy.q6.yml
@@ -30,6 +30,7 @@ jobs:
       - uses: actions/setup-node@v1
       - run: npm ci
       - run: npm i @navikt/arbeidsforhold@latest
+      - run: npm test
       - run: npm run build
       - name: Docker build and push
         run: |
