--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personopplysninger",
-  "version": "1.1.68-0",
+  "version": "v1.1.67.31-dev",
   "private": true,
   "author": "NAV",
   "license": "MIT",
