--- a/.github/workflows/deploy.q0.yml
+++ b/.github/workflows/deploy.q0.yml
@@ -27,13 +27,12 @@ jobs:
           echo ::set-env name=REACT_APP_DSOP_URL::https://www-q0.nav.no/person/dsop-api
           echo ::set-env name=REACT_APP_TJENESTER_URL::https://tjenester-q0.nav.no
           echo ::set-env name=REACT_APP_LOGIN_URL::https://loginservice-q.nav.no/login
-      - uses: actions/setup-node@v1
       - uses: actions/cache@v1
         with:
-          path: node_modules
-          key: ${{ runner.OS }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
-            ${{ runner.OS }}-npm-cache-
+            ${{ runner.os }}-node-
       - run: npm ci
       - run: npm i @navikt/arbeidsforhold@latest
       - run: npm test
