--- a/.github/workflows/deploy.q2.yml
+++ b/.github/workflows/deploy.q2.yml
@@ -21,6 +21,7 @@ jobs:
         run: |
           echo ::set-env name=REACT_APP_MILJO::Q2
           echo ::set-env name=REACT_APP_PDL_URL::https://www-q2.nav.no/person/pdl-fullmakt-ui
+          echo ::set-env name=REACT_APP_BFT_URL::https://www-q2.nav.no/person/behov-for-tilrettelegging
           echo ::set-env name=REACT_APP_URL::https://www-q2.nav.no/person/personopplysninger
           echo ::set-env name=REACT_APP_API_URL::https://www-q2.nav.no/person/personopplysninger-api
           echo ::set-env name=REACT_APP_DSOP_URL::https://www-q2.nav.no/person/dsop-api
