--- a/.github/workflows/deploy.q0.yml
+++ b/.github/workflows/deploy.q0.yml
@@ -1,8 +1,8 @@
 name: Deploy-to-q0
 on:
   push:
-    branches:
-      - master
+    tags:
+      - v*-prod
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -38,7 +38,6 @@ jobs:
       - run: npm run build
       - name: Docker build and push
         run: |
-          echo $GITHUB_TOKEN | docker login $IMAGE_REGISTRY -u "x-access-token" --password-stdin
           docker build -t $IMAGE_REGISTRY/$IMAGE_NAME:$IMAGE_VERSION .
           docker push $IMAGE_REGISTRY/$IMAGE_NAME:$IMAGE_VERSION
       - name: Generate nais variables
