--- a/.github/workflows/deploy.prod.yml
+++ b/.github/workflows/deploy.prod.yml
@@ -38,6 +38,7 @@ jobs:
       - run: npm run build
       - name: Docker build and push
         run: |
+          echo $GITHUB_TOKEN | docker login $IMAGE_REGISTRY -u "x-access-token" --password-stdin
           echo docker build -t $IMAGE_REGISTRY/$IMAGE_NAME:$IMAGE_VERSION -t $IMAGE_REGISTRY/$IMAGE_NAME:latest .
           echo docker push $IMAGE_REGISTRY/$IMAGE_NAME
       - name: Generate nais variables
