--- a/.github/workflows/deploy.prod.yml
+++ b/.github/workflows/deploy.prod.yml
@@ -39,8 +39,8 @@ jobs:
       - name: Docker build and push
         run: |
           echo $GITHUB_TOKEN | docker login $IMAGE_REGISTRY -u "x-access-token" --password-stdin
-          echo docker build -t $IMAGE_REGISTRY/$IMAGE_NAME:$IMAGE_VERSION -t $IMAGE_REGISTRY/$IMAGE_NAME:latest .
-          echo docker push $IMAGE_REGISTRY/$IMAGE_NAME
+          docker build -t $IMAGE_REGISTRY/$IMAGE_NAME:$IMAGE_VERSION -t $IMAGE_REGISTRY/$IMAGE_NAME:latest .
+          docker push $IMAGE_REGISTRY/$IMAGE_NAME
       - name: Generate nais variables
         run: |
           cat > .nais/vars.yaml <<EOF
