Ignore -dev tags i prod /q0

--- a/.github/workflows/deploy.prod.yml
+++ b/.github/workflows/deploy.prod.yml
@@ -2,7 +2,9 @@ name: Deploy-to-prod
 on:
   push:
     tags:
-      - v*-prod
+      - v*
+    tags-ignore:
+      - v*-dev
 jobs:
   deploy:
     runs-on: ubuntu-latest
