--- a/.github/workflows/deploy.q1.yml
+++ b/.github/workflows/deploy.q1.yml
@@ -40,7 +40,7 @@ jobs:
         run: |
           echo $GITHUB_TOKEN | docker login $IMAGE_REGISTRY -u ${GITHUB_REPOSITORY} --password-stdin
           docker build -t $IMAGE_REGISTRY/application:$IMAGE_VERSION .
-          docker push $IMAGE_REGISTRY/$IMAGE_NAME:$IMAGE_VERSION
+          docker push $IMAGE_REGISTRY/application:$IMAGE_VERSION
       - name: Generate nais variables
         run: |
           cat > .nais/vars.yaml <<EOF
