--- a/.github/workflows/deploy.prod.yml
+++ b/.github/workflows/deploy.prod.yml
@@ -23,6 +23,7 @@ jobs:
         run: |
           echo ::set-env name=REACT_APP_MILJO::PROD
           echo ::set-env name=REACT_APP_PDL_URL::https://www.nav.no/person/pdl-fullmakt-ui
+          echo ::set-env name=REACT_APP_BFT_URL::https://www.nav.no/person/behov-for-tilrettelegging
           echo ::set-env name=REACT_APP_URL::https://www.nav.no/person/personopplysninger
           echo ::set-env name=REACT_APP_API_URL::https://www.nav.no/person/personopplysninger-api
           echo ::set-env name=REACT_APP_DSOP_URL::https://www.nav.no/person/dsop-api
