--- a/.github/workflows/deploy.q0.yml
+++ b/.github/workflows/deploy.q0.yml
@@ -13,7 +13,8 @@ jobs:
       - name: Check for tag in master
         run: |
           if [ -z "$(git branch --contains ${GITHUB_REF##*/} | grep master)" ]; then
-             exit 1
+            echo Tag ${GITHUB_REF##*/} was not tagged from master
+            exit 1
           fi
       - name: Define build environment
         env:
