--- a/.github/workflows/deploy.q0.yml
+++ b/.github/workflows/deploy.q0.yml
@@ -11,7 +11,9 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Check for tag in master
+        env:
         run: |
+          echo "$(git branch --contains ${GITHUB_REF##*/} | grep master)"
           if [ -z "$(git branch --contains ${GITHUB_REF##*/} | grep master)" ]; then
             echo Tag ${GITHUB_REF##*/} was not tagged from master
             exit 1
