--- a/.github/workflows/deploy.q0.yml
+++ b/.github/workflows/deploy.q0.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Check for tag in master
         run: |
           echo "$(git branch --contains ${GITHUB_REF##*/} | grep master)"
-          if [ -z "$(git branch --contains ${GITHUB_REF##*/} | grep master)" ]; then
+          if [[ -z $(git branch --contains ${GITHUB_REF##*/} | grep master) ]]; then
             echo Tag ${GITHUB_REF##*/} was not tagged from master
             exit 1
           fi
