--- a/.github/workflows/deploy.prod.yml
+++ b/.github/workflows/deploy.prod.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v1
       - name: Check for tag in master
         run: |
-          if [ -z "$(git branch --contains ${GITHUB_REF##*/} | grep master)" ]; then
+          if [ ! -n $(git branch --contains ${GITHUB_REF##*/} | grep master) ]; then
             echo Tag ${GITHUB_REF##*/} was not tagged from master
             exit 1
           fi
