--- a/.env.sample
+++ b/.env.sample
@@ -2,6 +2,7 @@ REACT_APP_MILJO=LOCAL
 REACT_APP_URL=http://localhost:3000/person/personopplysninger
 REACT_APP_PDL_URL=https://www.nav.no/person/pdl-fullmakt-ui
 REACT_APP_BFT_URL=https://www.nav.no/person/behov-for-tilrettelegging
+REACT_APP_SKJERMING_URL=https://www.nav.no/person/personopplysninger/skjerming
 REACT_APP_API_URL=http://localhost:8080/person/personopplysninger-api
 REACT_APP_DSOP_URL=http://localhost:8081/person/dsop-api
 REACT_APP_TJENESTER_URL=https://tjenester.nav.no
