--- a/.github/workflows/deploy.q6.yml
+++ b/.github/workflows/deploy.q6.yml
@@ -24,6 +24,7 @@ jobs:
           echo ::set-env name=REACT_APP_URL::https://www-q6.nav.no/person/personopplysninger
           echo ::set-env name=REACT_APP_PDL_URL::https://www-q6.nav.no/person/pdl-fullmakt-ui
           echo ::set-env name=REACT_APP_BFT_URL::https://www-q6.nav.no/person/behov-for-tilrettelegging
+          echo ::set-env name=REACT_APP_SKJERMING_URL::https://www-q6.nav.no/person/personopplysninger/skjerming
           echo ::set-env name=REACT_APP_API_URL::https://www-q6.nav.no/person/personopplysninger-api
           echo ::set-env name=REACT_APP_DSOP_URL::https://www-q6.nav.no/person/dsop-api
           echo ::set-env name=REACT_APP_TJENESTER_URL::https://tjenester-q6.nav.no
