Oppdater alle pakker

--- a/package.json
+++ b/package.json
@@ -21,97 +21,100 @@
     "test": "react-scripts test"
   },
   "dependencies": {
-    "@babel/core": "^7.4.5",
-    "@navikt/arbeidsforhold": "^1.1.19",
+    "@babel/core": "^7.10.2",
+    "@navikt/arbeidsforhold": "^1.1.25",
+    "@navikt/fnrvalidator": "^1.1.2",
     "calidation": "^1.16.2",
-    "core-js": "^2.5.7",
-    "fetch-mock": "^7.3.3",
+    "core-js": "^3.6.5",
+    "fetch-mock": "^9.10.1",
     "file-saver": "^2.0.2",
-    "ibantools": "^2.2.0",
+    "ibantools": "^3.0.0",
     "intl": "^1.2.5",
     "js-cookie": "^2.2.1",
     "lodash.throttle": "^4.1.1",
-    "moment": "^2.24.0",
-    "nav-frontend-alertstriper": "^3.0.4",
-    "nav-frontend-alertstriper-style": "^2.0.2",
-    "nav-frontend-chevron": "^1.0.9",
-    "nav-frontend-chevron-style": "^0.3.4",
-    "nav-frontend-core": "^4.0.9",
-    "nav-frontend-ekspanderbartpanel": "^1.0.28",
-    "nav-frontend-ekspanderbartpanel-style": "^0.3.20",
-    "nav-frontend-etiketter": "^1.0.23",
-    "nav-frontend-etiketter-style": "^0.3.17",
-    "nav-frontend-hjelpetekst": "^1.0.39",
-    "nav-frontend-hjelpetekst-style": "^0.3.29",
-    "nav-frontend-ikoner-assets": "^1.0.1",
-    "nav-frontend-js-utils": "^1.0.7",
-    "nav-frontend-knapper": "^1.0.34",
-    "nav-frontend-knapper-style": "^0.3.29",
-    "nav-frontend-lenkepanel": "^1.0.29",
-    "nav-frontend-lenkepanel-style": "^0.3.25",
-    "nav-frontend-lenker": "^1.0.27",
-    "nav-frontend-lenker-style": "^0.2.20",
-    "nav-frontend-lesmerpanel": "0.0.29",
-    "nav-frontend-lesmerpanel-style": "0.0.25",
-    "nav-frontend-lukknapp": "^1.0.22",
-    "nav-frontend-lukknapp-style": "^0.2.20",
-    "nav-frontend-modal": "^1.0.29",
-    "nav-frontend-modal-style": "^0.3.30",
-    "nav-frontend-paneler": "^1.0.17",
-    "nav-frontend-paneler-style": "^0.3.16",
-    "nav-frontend-skjema": "^1.0.71",
-    "nav-frontend-skjema-style": "^1.0.44",
-    "nav-frontend-spinner": "^1.0.18",
+    "moment": "^2.26.0",
+    "nav-frontend-alertstriper": "^3.0.18",
+    "nav-frontend-alertstriper-style": "^2.0.16",
+    "nav-frontend-chevron": "^1.0.10",
+    "nav-frontend-chevron-style": "^0.3.5",
+    "nav-frontend-core": "^5.0.1",
+    "nav-frontend-ekspanderbartpanel": "^3.0.19",
+    "nav-frontend-ekspanderbartpanel-style": "^1.0.19",
+    "nav-frontend-etiketter": "^2.0.3",
+    "nav-frontend-etiketter-style": "^1.0.3",
+    "nav-frontend-hjelpetekst": "^2.0.29",
+    "nav-frontend-hjelpetekst-style": "^2.0.25",
+    "nav-frontend-ikoner-assets": "^2.0.1",
+    "nav-frontend-js-utils": "^1.0.8",
+    "nav-frontend-knapper": "^2.0.4",
+    "nav-frontend-knapper-style": "^0.3.38",
+    "nav-frontend-lenkepanel": "^1.0.42",
+    "nav-frontend-lenkepanel-style": "^0.3.31",
+    "nav-frontend-lenker": "^1.0.37",
+    "nav-frontend-lenker-style": "^0.2.28",
+    "nav-frontend-lesmerpanel": "0.0.38",
+    "nav-frontend-lesmerpanel-style": "0.0.31",
+    "nav-frontend-lukknapp": "^1.0.28",
+    "nav-frontend-lukknapp-style": "^0.2.24",
+    "nav-frontend-modal": "^1.0.36",
+    "nav-frontend-modal-style": "^0.3.35",
+    "nav-frontend-paneler": "^2.0.5",
+    "nav-frontend-paneler-style": "^0.3.21",
+    "nav-frontend-popover": "0.0.25",
+    "nav-frontend-popover-style": "0.0.5",
+    "nav-frontend-skjema": "^3.0.7",
+    "nav-frontend-skjema-style": "^2.0.9",
+    "nav-frontend-spinner": "^2.0.2",
     "nav-frontend-spinner-style": "^0.2.5",
-    "nav-frontend-tabs": "0.0.32",
-    "nav-frontend-tabs-style": "0.0.18",
-    "nav-frontend-typografi": "^2.0.13",
-    "nav-frontend-typografi-style": "^1.0.14",
-    "nav-frontend-veileder": "^2.0.11",
-    "nav-frontend-veileder-style": "^2.0.8",
-    "nav-frontend-veilederpanel": "^0.1.14",
-    "nav-frontend-veilederpanel-style": "0.0.17",
+    "nav-frontend-tabs": "0.0.41",
+    "nav-frontend-tabs-style": "0.0.27",
+    "nav-frontend-typografi": "^2.0.21",
+    "nav-frontend-typografi-style": "^1.0.22",
+    "nav-frontend-veileder": "^2.0.18",
+    "nav-frontend-veileder-style": "^2.0.15",
+    "nav-frontend-veilederpanel": "^0.1.26",
+    "nav-frontend-veilederpanel-style": "0.0.29",
     "npm-run-all": "^4.1.5",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-collapse": "^4.0.3",
-    "react-day-picker": "^7.3.2",
-    "react-dom": "^16.12.0",
-    "react-intl": "^3.7.0",
-    "react-modal": "^3.8.1",
-    "react-moment": "^0.9.2",
+    "react": "^16.13.1",
+    "react-collapse": "^5.0.1",
+    "react-day-picker": "^7.4.8",
+    "react-dom": "^16.13.1",
+    "react-intl": "^4.6.9",
+    "react-modal": "^3.11.2",
+    "react-moment": "^0.9.7",
     "react-motion": "^0.5.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
     "react-scrollable-anchor": "^0.6.1",
-    "react-select": "^3.0.4",
-    "typescript": "^3.5.1"
+    "react-select": "^3.1.0",
+    "typescript": "^3.9.5"
   },
   "devDependencies": {
-    "@types/calidation": "^1.16.0",
-    "@types/classnames": "^2.2.9",
-    "@types/fetch-mock": "^7.3.1",
+    "@types/calidation": "^1.16.1",
+    "@types/classnames": "^2.2.10",
+    "@types/fetch-mock": "^7.3.2",
     "@types/file-saver": "^2.0.1",
-    "@types/jest": "24.0.13",
-    "@types/js-cookie": "^2.2.4",
-    "@types/node": "12.0.8",
-    "@types/react": "16.8.19",
-    "@types/react-dom": "16.8.4",
+    "@types/jest": "26.0.0",
+    "@types/js-cookie": "^2.2.6",
+    "@types/node": "14.0.13",
+    "@types/react": "16.9.36",
+    "@types/react-dom": "16.9.8",
     "@types/react-intl": "^3.0.0",
-    "@types/react-modal": "^3.10.0",
-    "@types/react-router-dom": "^5.1.3",
+    "@types/react-modal": "^3.10.5",
+    "@types/react-router-dom": "^5.1.5",
     "@types/react-scrollable-anchor": "^0.6.0",
-    "@types/react-select": "^3.0.5",
+    "@types/react-select": "^3.0.13",
     "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.6",
     "jest": "^24.9.0",
-    "less": "^3.9.0",
+    "less": "^3.11.3",
     "less-plugin-npm-import": "^2.1.0",
-    "less-watch-compiler": "^1.13.0",
-    "prettier": "^1.18.2",
-    "ts-jest": "^24.2.0",
-    "tslint": "^5.17.0",
-    "tslint-react": "^4.0.0"
+    "less-watch-compiler": "^1.14.6",
+    "prettier": "^2.0.5",
+    "ts-jest": "^26.1.0",
+    "tslint": "^6.1.2",
+    "tslint-react": "^5.0.0"
   },
   "browserslist": [
     ">0.2%",
