--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personopplysninger",
-  "version": "1.5.3",
+  "version": "1.13.25-prod",
   "private": true,
   "author": "NAV",
   "license": "MIT",
