--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personopplysninger",
-  "version": "1.13.42",
+  "version": "1.13.44-test",
   "private": true,
   "author": "NAV",
   "license": "MIT",
