--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@navikt/arbeidsforhold": "^1.3.1",
     "@navikt/fnrvalidator": "^1.1.3",
     "@react-pdf/renderer": "^2.0.0-beta.6",
-    "calidation": "^1.16.2",
+    "calidation": "^1.16.1",
     "core-js": "^3.6.5",
     "fetch-mock": "^9.10.7",
     "file-saver": "^2.0.2",
@@ -91,7 +91,7 @@
     "typescript": "^4.0.2"
   },
   "devDependencies": {
-    "@types/calidation": "^1.16.2",
+    "@types/calidation": "1.16.1",
     "@types/classnames": "^2.2.10",
     "@types/fetch-mock": "^7.3.2",
     "@types/file-saver": "^2.0.1",
