--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "react-scripts": "3.4.3",
     "react-scrollable-anchor": "^0.6.1",
     "react-select": "^3.1.0",
+    "react-transition-group": "^4.4.1",
     "typescript": "^3.9.5"
   },
   "devDependencies": {
@@ -104,6 +105,7 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/react-scrollable-anchor": "^0.6.0",
     "@types/react-select": "^3.0.19",
+    "@types/react-transition-group": "^4.4.0",
     "classnames": "^2.2.6",
     "less": "^3.12.2",
     "less-plugin-npm-import": "^2.1.0",
