--- a/.github/workflows/deploy.q0.yml
+++ b/.github/workflows/deploy.q0.yml
@@ -2,9 +2,7 @@ name: Deploy-to-q0
 on:
   push:
     tags:
-      - "v*"
-      - "!v*-test"
-      - "!v*-dev"
+      - "v*-test"
 jobs:
   deploy:
     runs-on: ubuntu-latest
