--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@navikt/fnrvalidator": "^1.1.3",
     "@navikt/nav-dekoratoren-moduler": "^1.0.2",
     "@react-pdf/renderer": "^2.0.0-beta.6",
-    "calidation": "^1.16.2",
+    "calidation": "1.16.1",
     "core-js": "^3.6.5",
     "fetch-mock": "^9.10.7",
     "file-saver": "^2.0.2",
@@ -89,7 +89,7 @@
     "react-scripts": "3.4.3",
     "react-scrollable-anchor": "^0.6.1",
     "react-select": "^3.1.0",
-    "typescript": "^4.0.2"
+    "typescript": "^3.9.5"
   },
   "devDependencies": {
     "@types/calidation": "1.16.2",
