--- a/.github/workflows/deploy.q0.yml
+++ b/.github/workflows/deploy.q0.yml
@@ -2,7 +2,9 @@ name: Deploy-to-q0
 on:
   push:
     tags:
-      - "v*-test"
+      - "v*"
+      - "!v*-test"
+      - "!v*-dev"
 jobs:
   deploy:
     runs-on: ubuntu-latest
