--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personopplysninger",
-  "version": "1.14.7-test",
+  "version": "1.14.7-prod",
   "private": true,
   "author": "NAV",
   "license": "MIT",
