--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test": "react-scripts test"
   },
   "dependencies": {
-    "@navikt/arbeidsforhold": "^1.3.2",
+    "@navikt/arbeidsforhold": "^1.3.8",
     "@navikt/fnrvalidator": "^1.1.3",
     "@navikt/nav-dekoratoren-moduler": "^1.0.18",
     "@react-pdf/renderer": "^2.0.0-beta.6",
@@ -86,7 +86,7 @@
     "react-moment": "^0.9.7",
     "react-motion": "^0.5.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^3.4.4",
     "react-scrollable-anchor": "^0.6.1",
     "react-select": "^3.1.0",
     "typescript": "^3.9.5"
