--- a/.github/workflows/deploy.prod.yml
+++ b/.github/workflows/deploy.prod.yml
@@ -30,6 +30,7 @@ jobs:
           echo ::set-env name=REACT_APP_DSOP_URL::https://www.nav.no/person/dsop-api
           echo ::set-env name=REACT_APP_TJENESTER_URL::https://tjenester.nav.no
           echo ::set-env name=REACT_APP_LOGIN_URL::https://loginservice.nav.no/login
+          echo ::set-env name=REACT_APP_DITT_NAV_URL::https://www.nav.no/person/dittnav
       - uses: actions/cache@v1
         with:
           path: ~/.npm
