--- a/.github/workflows/deploy.q2.yml
+++ b/.github/workflows/deploy.q2.yml
@@ -28,6 +28,7 @@ jobs:
           echo ::set-env name=REACT_APP_DSOP_URL::https://www-q2.nav.no/person/dsop-api
           echo ::set-env name=REACT_APP_TJENESTER_URL::https://tjenester-q2.nav.no
           echo ::set-env name=REACT_APP_LOGIN_URL::https://loginservice-q.nav.no/login
+          echo ::set-env name=REACT_APP_DITT_NAV_URL::https://www-q2.nav.no/person/dittnav
       - uses: actions/cache@v1
         with:
           path: ~/.npm
