--- a/.github/workflows/deploy.prod.yml
+++ b/.github/workflows/deploy.prod.yml
@@ -21,16 +21,16 @@ jobs:
           echo "GITHUB_TOKEN=$(echo ${GITHUB_TOKEN})" >> $GITHUB_ENV
       - name: Define client-side environment
         run: |
-          echo "REACT_APP_MILJO::PROD" >> $GITHUB_ENV
-          echo "REACT_APP_PDL_URL::https://www.nav.no/person/pdl-fullmakt-ui" >> $GITHUB_ENV
-          echo "REACT_APP_BFT_URL::https://www.nav.no/person/behov-for-tilrettelegging" >> $GITHUB_ENV
-          echo "REACT_APP_SKJERMING_URL::https://www.nav.no/person/personopplysninger/skjerming" >> $GITHUB_ENV
-          echo "REACT_APP_URL::https://www.nav.no/person/personopplysninger" >> $GITHUB_ENV
-          echo "REACT_APP_API_URL::https://www.nav.no/person/personopplysninger-api" >> $GITHUB_ENV
-          echo "REACT_APP_DSOP_URL::https://www.nav.no/person/dsop-api" >> $GITHUB_ENV
-          echo "REACT_APP_TJENESTER_URL::https://tjenester.nav.no" >> $GITHUB_ENV
-          echo "REACT_APP_LOGIN_URL::https://loginservice.nav.no/login" >> $GITHUB_ENV
-          echo "REACT_APP_DITT_NAV_URL::https://www.nav.no/person/dittnav" >> $GITHUB_ENV
+          echo "REACT_APP_MILJO=PROD" >> $GITHUB_ENV
+          echo "REACT_APP_PDL_URL=https://www.nav.no/person/pdl-fullmakt-ui" >> $GITHUB_ENV
+          echo "REACT_APP_BFT_URL=https://www.nav.no/person/behov-for-tilrettelegging" >> $GITHUB_ENV
+          echo "REACT_APP_SKJERMING_URL=https://www.nav.no/person/personopplysninger/skjerming" >> $GITHUB_ENV
+          echo "REACT_APP_URL=https://www.nav.no/person/personopplysninger" >> $GITHUB_ENV
+          echo "REACT_APP_API_URL=https://www.nav.no/person/personopplysninger-api" >> $GITHUB_ENV
+          echo "REACT_APP_DSOP_URL=https://www.nav.no/person/dsop-api" >> $GITHUB_ENV
+          echo "REACT_APP_TJENESTER_URL=https://tjenester.nav.no" >> $GITHUB_ENV
+          echo "REACT_APP_LOGIN_URL=https://loginservice.nav.no/login" >> $GITHUB_ENV
+          echo "REACT_APP_DITT_NAV_URL=https://www.nav.no/person/dittnav" >> $GITHUB_ENV
       - uses: actions/cache@v1
         with:
           path: ~/.npm
