--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personopplysninger",
-  "version": "3.4.49-prod",
+  "version": "3.4.49-test",
   "private": true,
   "author": "NAV",
   "license": "MIT",
