--- a/.github/workflows/deploy.q0.yml
+++ b/.github/workflows/deploy.q0.yml
@@ -31,6 +31,7 @@ jobs:
           echo "REACT_APP_TJENESTER_URL=https://tjenester-q0.nav.no" >> $GITHUB_ENV
           echo "REACT_APP_LOGIN_URL=https://loginservice-q.nav.no/login" >> $GITHUB_ENV
           echo "REACT_APP_DITT_NAV_URL=https://www-q0.nav.no/person/dittnav" >> $GITHUB_ENV
+          echo "REACT_APP_PENSJONSOPPTJENING_URL=https://www-q0.nav.no/pensjon/opptjening" >> $GITHUB_ENV
       - uses: actions/cache@v1
         with:
           path: ~/.npm
