--- a/.github/workflows/deploy.q6.yml
+++ b/.github/workflows/deploy.q6.yml
@@ -30,6 +30,7 @@ jobs:
           echo "REACT_APP_TJENESTER_URL=https://tjenester-q6.nav.no" >> $GITHUB_ENV
           echo "REACT_APP_LOGIN_URL=https://loginservice-q.nav.no/login" >> $GITHUB_ENV
           echo "REACT_APP_DITT_NAV_URL=https://www-q6.nav.no/person/dittnav" >> $GITHUB_ENV
+          echo "REACT_APP_PENSJONSOPPTJENING_URL=https://www-q6.nav.no/pensjon/opptjening" >> $GITHUB_ENV
       - uses: actions/cache@v1
         with:
           path: ~/.npm
