Legg til node-cache og node-fetch!

--- a/package.json
+++ b/package.json
@@ -75,6 +75,8 @@
     "nav-frontend-veileder-style": "^2.0.27",
     "nav-frontend-veilederpanel": "^0.1.46",
     "nav-frontend-veilederpanel-style": "0.0.43",
+    "node-cache": "^5.1.2",
+    "node-fetch": "^2.6.1",
     "npm-run-all": "^4.1.5",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
@@ -99,6 +101,8 @@
     "@types/file-saver": "^2.0.1",
     "@types/js-cookie": "^2.2.6",
     "@types/node": "14.14.22",
+    "@types/node-cache": "^4.2.5",
+    "@types/node-fetch": "^2.5.8",
     "@types/react": "16.14.2",
     "@types/react-dom": "16.9.10",
     "@types/react-html-parser": "^2.0.1",
