oppdaterer deploy-rutiner - endrer fra tagging til å trigge manuelt - oppdatert CODEOWNERS - oppdatert scripts for versiontagging + rutiner for deploy i readme

--- a/.github/workflows/deploy.dev.yml
+++ b/.github/workflows/deploy.dev.yml
@@ -1,8 +1,6 @@
 name: Deploy-to-dev
-on:
-  push:
-    tags:
-      - "v*-dev"
+on: workflow_dispatch
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
