Håndterer innloggingsstatus i appen

--- a/.env.sample
+++ b/.env.sample
@@ -8,3 +8,4 @@ REACT_APP_API_URL=http://localhost:8080/person/personopplysninger-api
 REACT_APP_DSOP_URL=http://localhost:8081/person/dsop-api
 REACT_APP_TJENESTER_URL=https://tjenester.nav.no
 REACT_APP_LOGIN_URL=https://loginservice-q.nav.no/login
+REACT_APP_INNLOGGINGSSTATUS_URL=http://localhost:8095/innloggingsstatus
