Flytter til team namespace i prod

--- a/.github/workflows/deploy.prod.yml
+++ b/.github/workflows/deploy.prod.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Generate nais variables
         run: |
           cat > .nais/vars.yaml <<EOF
-          namespace: default
+          namespace: personbruker
           ingresses:
             - https://personopplysninger.nais.oera.no
             - https://www.nav.no/person/personopplysninger
