Endret fullmaktslenke fra q1 til dev

--- a/.github/workflows/deploy.dev.yml
+++ b/.github/workflows/deploy.dev.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Define client-side environment
         run: |
           echo "REACT_APP_MILJO=DEV" >> $GITHUB_ENV
-          echo "REACT_APP_PDL_URL=https://www-q1.nav.no/person/pdl-fullmakt-ui" >> $GITHUB_ENV
+          echo "REACT_APP_PDL_URL=https://www.dev.nav.no/person/pdl-fullmakt-ui" >> $GITHUB_ENV
           echo "REACT_APP_BFT_URL=https://www-q1.nav.no/person/behov-for-tilrettelegging" >> $GITHUB_ENV
           echo "REACT_APP_SKJERMING_URL=https://www.dev.nav.no/person/personopplysninger/skjerming" >> $GITHUB_ENV
           echo "REACT_APP_URL=https://www.dev.nav.no/person/personopplysninger" >> $GITHUB_ENV
