--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "postversion": "git push && git push --tags"
   },
   "dependencies": {
-    "@navikt/arbeidsforhold": "^1.4.4-beta.0",
+    "@navikt/arbeidsforhold": "^1.4.4",
     "@navikt/fnrvalidator": "^1.1.3",
     "@navikt/nav-dekoratoren-moduler": "^1.2.10",
     "@react-pdf/renderer": "^2.0.8",
