--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ services:
       API_INNLOGGINGSLINJE_URL: "http://localhost:8095/innloggingsstatus"
       API_VARSELINNBOKS_URL: "http://mocks:8080/person/varselinnboks"
       MINSIDE_ARBEIDSGIVER_URL: "http://localhost:8080/min-side-arbeidsgiver/"
-      DITT_NAV_URL: "http://localhost:8080/person/dittnav/"
+      DITT_NAV_URL: "http://localhost:8080/minside/"
       LOGIN_URL: "http://localhost:5000"
       LOGOUT_URL: "http://localhost:5000/?logout"
     depends_on:
