--- a/.github/workflows/deploy.prod.yml
+++ b/.github/workflows/deploy.prod.yml
@@ -14,9 +14,9 @@ jobs:
       - name: Setup node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '18'
-          registry-url: 'https://npm.pkg.github.com'
-          cache: 'npm'
+          node-version: "18"
+          registry-url: "https://npm.pkg.github.com"
+          cache: "npm"
       - name: Define build environment
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -58,6 +58,9 @@ jobs:
           namespace: personbruker
           ingresses:
             - https://www.nav.no/person/personopplysninger
+          externalHosts:
+            - www.nav.no
+            - nav.no
           image: $IMAGE_REGISTRY/$IMAGE_NAME
           version: $IMAGE_VERSION
           env: prod
