Legger til dev-dekoratør i external hosts

--- a/.github/workflows/deploy.dev.yml
+++ b/.github/workflows/deploy.dev.yml
@@ -57,6 +57,7 @@ jobs:
             - www.dev.nav.no
             - dev.nav.no
             - person.ekstern.dev.nav.no
+            - dekoratoren.dev.nav.no
           image: $IMAGE_REGISTRY/$IMAGE_NAME
           version: $IMAGE_VERSION
           env: dev
