--- a/.github/workflows/deploy.prod.yml
+++ b/.github/workflows/deploy.prod.yml
@@ -55,7 +55,6 @@ jobs:
       - name: Generate nais variables
         run: |
           cat > .nais/vars.yaml <<EOF
-          namespace: personbruker
           ingresses:
             - https://www.nav.no/person/personopplysninger
           externalHosts:
@@ -64,6 +63,10 @@ jobs:
           image: $IMAGE_REGISTRY/$IMAGE_NAME
           version: $IMAGE_VERSION
           env: prod
+          cpuReq: 200m
+          replicas:
+            min: 2
+            max: 4
           EOF
       - uses: nais/deploy/actions/deploy@master
         env:
