--- a/.github/workflows/deploy.dev.yml
+++ b/.github/workflows/deploy.dev.yml
@@ -50,7 +50,6 @@ jobs:
       - name: Generate nais variables
         run: |
           cat > .nais/vars.yaml <<EOF
-          namespace: personbruker
           ingresses:
             - https://www.dev.nav.no/person/personopplysninger
           externalHosts:
@@ -61,6 +60,10 @@ jobs:
           image: $IMAGE_REGISTRY/$IMAGE_NAME
           version: $IMAGE_VERSION
           env: dev
+          cpuReq: 50m
+          replicas:
+            min: 1
+            max: 2
           EOF
       - uses: nais/deploy/actions/deploy@master
         env:
